# python-extensions-static-site-generator

./: conftest.py  pyproject.toml  ssg.py
ssg/: extensions.py
ssg/extensions/: menu.py
tests/: test_module3.py
