[tool.poetry]
name = "python-extensions-static-site-generator"
version = "0.1.0"
description = "Pluralsight Project by Tom Bell"
authors = ["Michael Hinz <michael@hinz.no>"]

[tool.poetry.dependencies]
python = "^3.10"
docutils = "^0.19"
Markdown = "^3.4.1"
mongoquery = "^1.4.2"
objectpath = "^0.6.1"
parso = "^0.8.3"
pytest = "^7.1.2"
pytest-json-report = "^1.5.0"
PyYAML = "^6.0"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
